Fixing the nav pulldown on mobile so signin links are visible

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -93,9 +93,11 @@
 	}
 }
 
-// not sure what the padding is doing on this element...
 .navbar-collapse {
 	.box-shadow( none );
+	// why max-height, bootstrap, why???
+	max-height: 1000px;
+	// not sure what the padding is doing on this element...
 	padding-left: 0;
 	padding-right: 0;
 }
